--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -20,7 +20,16 @@
                     <form action="" method="post" id="findPatient" onsubmit="event.preventDefault(); performMainSearch();">
                         <div class="input-group mb-3">
                             <input type="text" class="form-control" name="search_query" placeholder="Ονοματεπώνυμο ή/και τηλέφωνο" aria-label="Search for a patient" aria-describedby="button-search" style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;">
-                            <button class="btn btn-outline-secondary" type="submit" id="button-search">Αναζήτηση</button>
+                            <button class="btn btn-outline-secondary" type="submit" id="button-search">Αναζήτηση
+                                <svg xmlns="http://www.w3.org/2000/svg" 
+                                        width="16" 
+                                        height="16" 
+                                        fill="var(--vibrant-pink)" 
+                                        class="bi bi-search" 
+                                        viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                                </svg>
+                            </button>
                         </div>
                     </form>
 
