--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -72,7 +72,7 @@
                                             {% endif %}
                                         </p>
                                         
-                                        <button class="btn btn-outline-secondary px-4" onclick="toggleEditModePersonalDetails()">Επεξεργασία</button>
+                                        <button class="btn btn-outline-secondary mb-2 px-4" onclick="toggleEditModePersonalDetails()">Επεξεργασία</button>
                                     </div>
 
 
@@ -221,8 +221,8 @@
                                                         {% for field_name, field_config in contact_fields.items() %}
                                                             {{ input_group(field_name, field_config, getattr(patient, field_name)) }}
                                                         {% endfor %}
-                                                        <button type="button" class="btn login-btn m-2 px-4" onclick="saveChangesContactDetails()">Αποθήκευση</button>
-                                                        <button type="button" class="btn btn-outline-light m-2 px-4" onclick="cancelChanges()">Ακύρωση</button>
+                                                        <button type="button" class="btn login-btn m-2 mb-2 px-4" onclick="saveChangesContactDetails()">Αποθήκευση</button>
+                                                        <button type="button" class="btn btn-outline-light m-2 mb-2 px-4" onclick="cancelChanges()">Ακύρωση</button>
                                                     </form>
                                                 </div>
                                             </div>
