--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -198,26 +198,26 @@
                 <div class="col-12 col-lg-6 text-light">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
                         <div class="d-flex flex-column h-100 text-shadow-1">
-
-                            <!-- New content with slider card -->
-                            <div class="container px-0 ">
-                                <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerContactDetails">
-
-                                    <div class="read-only read-only-labels p-4" id="readOnlyContentCD">
+                            <div class="container px-0 h-100">
+                                <div class="form-container h-100" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerContactDetails">
+                                    <div class="read-only read-only-labels p-4 d-flex flex-column h-100" id="readOnlyContentCD">
                                         <h3 class="text-center mt-2">Στοιχεία Επικοινωνίας</h3>
-
-                                        {% macro display_field(field_name, field_config, value) %}
-                                            {% if value %}
-                                                <span>{{ field_config.label }}:</span> {{ value }}<br>
-                                            {% endif %}
-                                        {% endmacro %}
-
-                                        <p class="zd mt-0 pt-2">
-                                            {% for field_name, field_config in contact_fields.items() %}
-                                                {{ display_field(field_name, field_config, getattr(patient, field_name)) }}
-                                            {% endfor %}
-                                        </p>
-                                        <div class="d-flex flex-wrap justify-content-end gap-2 mt-3">
+                
+                                        <div class="flex-grow-1">
+                                            {% macro display_field(field_name, field_config, value) %}
+                                                {% if value %}
+                                                    <span>{{ field_config.label }}:</span> {{ value }}<br>
+                                                {% endif %}
+                                            {% endmacro %}
+                
+                                            <p class="zd mt-0 pt-2">
+                                                {% for field_name, field_config in contact_fields.items() %}
+                                                    {{ display_field(field_name, field_config, getattr(patient, field_name)) }}
+                                                {% endfor %}
+                                            </p>
+                                        </div>
+                
+                                        <div class="mt-auto d-flex justify-content-end">
                                             <button type="button" class="btn btn-outline-light px-4" onclick="toggleEditModeContactDetails()">
                                                 Επεξεργασία
                                             </button>
