--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -7,6 +7,26 @@
 
 <main class="flex-shrink-0 m-auto flex-grow-1 bg-dark" style="width: 100%;">
 
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-dark">Επιβεβαίωση Διαγραφής</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body text-dark">
+                    Είστε σίγουροι ότι θέλετε να διαγράψετε τον ασθενή;
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ακύρωση</button>
+                    <button type="button" class="btn btn-danger" onclick="confirmDelete()">Διαγραφή</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="pt-2 container px-4 text-light" id="icon-grid">
         <h2 class="zd py-2 text-center">{{ patient.first_name | proper_case}} {{ patient.last_name | proper_case}}</h2>
     </div>
@@ -57,6 +77,11 @@
                                             {% if patient.amka %}
                                                 <span>AMKA:</span> {{ patient.amka }}
                                             {% endif %}
+                                            {% if patient.is_active %}
+                                                <span>Κατάσταση:</span> Ενεργός
+                                            {% else %}
+                                                <span>Κατάσταση:</span> Ανενεργός
+                                            {% endif %}
                                         </p>
 
                                         <h3 class="text-center">Στοιχεία Συντρόφου</h3>
@@ -74,6 +99,10 @@
                                         
                                         <div class="d-flex flex-wrap justify-content-end gap-2 mt-3">
                                             <button type="button" class="btn btn-outline-light px-4" onclick="toggleEditModePersonalDetails()">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                                </svg>
                                                 Επεξεργασία
                                             </button>
                                         </div>
@@ -147,7 +176,7 @@
                                                                     <svg xmlns="http://www.w3.org/2000/svg" 
                                                                          width="16" 
                                                                          height="16" 
-                                                                         fill="var(--vibrant-pink)" 
+                                                                         fill="currentColor" 
                                                                          class="bi bi-search" 
                                                                          viewBox="0 0 16 16">
                                                                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
@@ -172,9 +201,17 @@
 
                                                         <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                                                             <button type="button" class="btn login-btn px-4" onclick="saveChangesPersonalDetails()">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-floppy" viewBox="0 0 16 16">
+                                                                    <path d="M11 2H9v3h2z"/>
+                                                                    <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                                                                </svg>
                                                                 Αποθήκευση
                                                             </button>
                                                             <button type="button" class="btn btn-outline-light px-4" onclick="cancelChanges()">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                                </svg>
                                                                 Ακύρωση
                                                             </button>
                                                         </div>
@@ -219,6 +256,10 @@
                                         </p>
                                         <div class="d-flex flex-wrap justify-content-end gap-2 mt-auto">
                                             <button type="button" class="btn btn-outline-light px-4" onclick="toggleEditModeContactDetails()">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                                </svg>
                                                 Επεξεργασία
                                             </button>
                                         </div>
@@ -237,9 +278,17 @@
 
                                                         <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                                                             <button type="button" class="btn login-btn px-4" onclick="saveChangesContactDetails()">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
+                                                                    <path d="M11 2H9v3h2z"/>
+                                                                    <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                                                                </svg>
                                                                 Αποθήκευση
                                                             </button>
                                                             <button type="button" class="btn btn-outline-light px-4" onclick="cancelChanges()">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                                </svg>
                                                                 Ακύρωση
                                                             </button>
                                                         </div>
@@ -311,7 +360,12 @@
             <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
             <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
           </div>
+        <button type="button" class="btn btn-outline-danger px-4" onclick="showDeleteModal()">
+            Διαγραφή
+        </button>
     </div>
+
+    
 </main>
 {% else %}
     <div class="container mt-5 pt-5">
@@ -323,6 +377,35 @@
 
 {% block javascript %}
 <script>
+
+    function showDeleteModal() {
+        const deleteModal = new bootstrap.Modal(document.getElementById('deleteModal'));
+        deleteModal.show();
+    }
+
+    async function confirmDelete() {
+        const patientId = '{{ patient.id }}';
+        try {
+            const response = await fetch(`/api/patients/${patientId}`, {
+                method: 'DELETE',
+                headers: { 'Content-Type': 'application/json' }
+            });
+
+            if (!response.ok) throw new Error('Delete failed');
+
+            const data = await response.json();
+            if (data.success) {
+                window.location.href = '/patients';
+            } else {
+                throw new Error(data.error);
+            }
+        } catch (error) {
+            console.error('Delete error:', error);
+            alert('Failed to delete patient: ' + error.message);
+        }
+    }
+
+
     function toggleEditModePersonalDetails() {
         const formContainer = document.getElementById('formContainerPersonalDetails');
         const readOnlyContent = document.getElementById('readOnlyContentPD');
