--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -24,7 +24,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" 
                                         width="16" 
                                         height="16" 
-                                        fill="var(--vibrant-pink)" 
+                                        fill="currentColor"
                                         class="bi bi-search" 
                                         viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
@@ -108,7 +108,13 @@
                                     <label for="email">Email</label>
                                 </div>
                                 <div class="text-center pb-3">
-                                    <button type="submit" class="btn login-btn px-4">Δημιουργία Καρτέλας</button>
+                                    <button type="submit" class="btn login-btn px-4">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                                        </svg>
+                                        Δημιουργία Καρτέλας
+                                    </button>
                                 </div>
                             </form>
                         </div>
