--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -37,7 +37,7 @@ h3 {
     font-weight: 100;
 }
 
-h2 {
+h2, h5 {
     font-weight: 100;
     color: var(--vibrant-pink);
 }
@@ -329,7 +329,8 @@ em {
 #pills-delete,
 #pills-update,
 #editableContentCD,
-#editableContentPD {
+#editableContentPD,
+.modal-content {
     background: var(--warm-beige);
     color: black;
     border: none;
