--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -68,13 +68,14 @@
           <form action="" method="post" id="findPatient" onsubmit="event.preventDefault(); performNavSearch();">
             <div class="input-group">
                 <input type="text" class="form-control" name="nav_search_query" placeholder="Ονοματεπώνυμο/Τηλ" aria-label="Search for a patient" aria-describedby="button-search" style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;">
-                <button class="btn btn-outline-secondary" type="submit" id="button-search" onclick="performNavSearch()">Αναζήτηση 
+                <button class="btn btn-outline-secondary" type="submit" id="button-search" onclick="performNavSearch()">
+                  Αναζήτηση 
                   <svg xmlns="http://www.w3.org/2000/svg" 
                         width="16" 
-                        height="16" 
+                        height="20" 
                         fill="currentColor" 
                         class="bi bi-search" 
-                        viewBox="0 0 16 16">
+                        viewBox="0 1 16 16">
                       <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                   </svg>
                 </button>
