format changes to the reactivation button

--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -446,3 +446,8 @@ select{
 input[type="date"]::-webkit-datetime-edit {
     color: inherit;
 }
+
+.form-check-input:checked {
+    background-color: var(--vibrant-pink);
+    border-color: var(--vibrant-pink);
+}
