--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -146,6 +146,19 @@
 
                                                     <form>
                                                         <h2 class="text-center mt-2">Προσωπικά Στοιχεία</h2>
+                                                        <!-- check box for active/inactive -->
+                                                        {% if not patient.is_active %}
+                                                        <div class="d-flex align-items-center gap-2 mb-3">
+                                                            <input type="checkbox" 
+                                                                id="isActiveInput" 
+                                                                class="form-check-input mt-0"
+                                                                {% if patient.is_active %}checked{% endif %}
+                                                                value='on'
+                                                                style="width: 1rem; height: 1rem;">
+                                                            <label for="isActiveInput">Επανενεργοποίηση</label>
+                                                        </div>
+                                                        {% endif %}
+
                                                         {% for field_name, field_config in personal_data_fields.items() %}
                                                             {{ input_group(field_name, field_config, getattr(patient, field_name)) }}
                                                         {% endfor %}
@@ -194,17 +207,6 @@
                                                                 </a>
                                                             </label>
                                                         </div>
-                                                        <!-- check box for active/inactive -->
-                                                        {% if not patient.is_active %}
-                                                        <div class="input-group">
-                                                            <input type="checkbox" 
-                                                                   id="isActiveInput" 
-                                                                   {% if patient.is_active %}checked{% endif %}
-                                                                   value='on'>
-                                                            <label for="isActiveInput" class="form-label">Επανενεργοποίηση</label>
-                                                        </div>
-                                                        {% endif %}
-
 
                                                         <h2 class="text-center mt-2">Στοιχεία Συντρόφου</h2>
                                                         {% for field_name, field_config in partner_data_fields.items() %}
