--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -342,7 +342,7 @@
         <div class="container justify-content-center" style="display: inline-flex; text-align: center;">
         <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
-              <button class="nav-link active" style="border-radius: 5rem;" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Ιατρικό Ιστορικό</button>
+              <button class="nav-link active" style="border-radius: 5rem;" id="pills-history_medical-tab" data-bs-toggle="pill" data-bs-target="#pills-history_medical" type="button" role="tab" aria-controls="pills-history_medical" aria-selected="true">Ιατρικό Ιστορικό</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link" style="border-radius: 5rem;" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Μαιευτικό Ιστορικό</button>
@@ -365,31 +365,9 @@
         </ul>
         </div>
           <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
-            <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+            <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-history_medical" role="tabpanel" aria-labelledby="pills-history_medical-tab" tabindex="0">
                 <h5 class="visually-hidden">Ιατρικό Ιστορικό</h5>
-                {% if medical_history %}
-
-
-                    {% for key, value in medical_history_dict.items() %}
-                        <p>
-                            <span>{{ key }}:</span> {{ value }} <br>
-                        <p>
-                    {% endfor %}
-                    {{
-                        medical_history.comments
-                    }}
-                    </p>
-                {% else %}
-                    <div class="text-end pb-3">
-                        <button class="btn login-btn px-4">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 1 16 16">
-                                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-                            </svg>
-                            Νέο Ιστορικό
-                        </button>
-                    </div>
-                {% endif %}
+                {% include 'patient_tabs/history_medical.html' %}
             </div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quasi enim mollitia doloribus praesentium dolores aut nostrum atque. Eveniet praesentium mollitia, quasi quia maxime expedita impedit odit sed modi? Quisquam.
@@ -582,4 +560,8 @@
         formContainer.style.maxHeight = readOnlyContent.scrollHeight + 'px';
     });
 </script>
+
+{{ super() }}
+{% block tab_javascript %}{% endblock %}
+
 {% endblock %}
